fixed alignment

--- a/cover.css
+++ b/cover.css
@@ -80,7 +80,7 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  display: table;
+  /*display: table;*/
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
@@ -88,17 +88,30 @@ body {
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+  /*display: table-cell;*/
+  vertical-align: top; /*this moves the Hi, I'm Henry*/
 }
 .cover-container {
   margin-right: auto;
   margin-left: auto;
 }
 
+/*made to vertically center the welcome message*/
+/*very difficult!*/
+.welcome {
+  position:absolute;
+  height:120px;
+  width:1000px;
+  left:50%;
+  margin-left:-500px;
+  top:50%;
+  margin-top:-60px;
+}
+
 /* Padding for spacing */
 .inner {
   padding: 30px;
+  padding-top:10px;
 }
 
 
@@ -186,7 +199,7 @@ body {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: absolute;
+    /*position: absolute;*/ /*solved overlap problem!*/
     top: 0;
   }
   .mastfoot {
@@ -195,7 +208,7 @@ body {
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
-    vertical-align: middle;
+    /*vertical-align: middle;*/
   }
   /* Handle the widths */
   .masthead,
